--- a/Exteranal/synology-external.yaml
+++ b/Exteranal/synology-external.yaml
@@ -1,43 +1,47 @@
-# wifi-external.yaml
+# synology-external.yaml
 
 apiVersion: v1
 kind: Service
 metadata:
-  name: wifi-service
+  name: synology-service
   namespace: default
 spec:
   ports:
-  - name: https-wifi-ui
-    port: 8443
-    targetPort: 8443
+  - name: https-dsm-ui
+    port: 5001
+    targetPort: 5001
 ---
 apiVersion: v1
 kind: Endpoints
 metadata:
-  name: wifi-service
+  name: synology-service
   namespace: default
 subsets:
   - addresses:
-    - ip: "192.168.50.12"
+    - ip: "192.168.50.3"
     ports:
-    - name: https-wifi-ui
-      port: 8443
+    - name: https-dsm-ui
+      port: 5001
 ---
 
 # Part 3: Ingress
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  # ingress
-  name: wifi-ingress
+  name: synology-ingress
   namespace: default
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-cloudflare-issuer"
 
-    # HTTPS backend protokol
+    # Backend Configuration
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
+    
+    # WebSocket Support for Synology DSM
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
        
+    # Standard Security Headers
     nginx.ingress.kubernetes.io/hsts: "true"
     nginx.ingress.kubernetes.io/hsts-max-age: "15552000"
     nginx.ingress.kubernetes.io/hsts-include-subdomains: "true"
@@ -46,16 +50,16 @@ spec:
   ingressClassName: nginx
   tls:
   - hosts:
-    - wifi.nhukovic.com
-    secretName: wifi-tls-secret
+    - synology.nhukovic.com
+    secretName: synology-tls-secret
   rules:
-  - host: "wifi.nhukovic.com"
+  - host: "synology.nhukovic.com"
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: wifi-service
+            name: synology-service
             port:
-              number: 8443
+              number: 5001
